tests/errors/unsatisfied-req.expect
---CODE---
1
---STDERR---
Error: [0m[1m[38;5;9merror[0m[1m: Cannot prove constraint G+1 >= G+2[0m
   [0m[34m┌─[0m tests/errors/unsatisfied-req.fil:10:16
   [0m[34m│[0m
[0m[34m10[0m [0m[34m│[0m   m0 := M<G+1>([0m[31mleft[0m, right);
   [0m[34m│[0m                [0m[31m^^^^[0m [0m[31mSource is available for [G, G+1][0m
   [0m[34m│[0m
   [0m[34m┌─[0m ./primitives/core.fil:49:3
   [0m[34m│[0m
[0m[34m49[0m [0m[34m│[0m   @[G, G+1] left: 32,
   [0m[34m│[0m   [0m[34m------------------[0m [0m[34mDestination's requirement [G+1, G+2][0m


